Fixed info in footer not being centered on mobile view

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -45,6 +45,7 @@ footer {
   footer {
     @include flex(center, center, column);
     .contact {
+      margin: 2rem 0;
       p {
         text-align: center;
         font-size: calc($p-font - 0.2rem);
